# DeepNeuro

./: .buildinfo  .dockerignore  .gitignore  .pypirc  .travis.yml  Dockerfile  LICENSE  README.md  README.rst  SECURITY.md  _coverpage.md  _sidebar.md  changelog.txt  conf.py  coverage_wrapper.py  deepneuro.html  deepneuro.models.html  deepneuro.testing.html  deepneuro.train.html  entrypoint.sh  genindex.html  index.html  index.rst  install.md  modules.html  modules.md  objects.inv  pipelines.md  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tutorials.md
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_sources/: index.rst.txt
deepneuro/: __init__.py  core.py  package_test.py
deepneuro/augmentation/: __init__.py  augment.py  subsample.py
deepneuro/container/: Dockerfile.deepneuro  Dockerfile.deepneuro_development  Dockerfile.deepneuro_development_nopackage  Dockerfile.deepneuro_test  Dockerfile.local_development  Dockerfile.local_development_cuda_9  Dokcerfile.deepneuro  container_cli.py  deploy.py  local_entrypoint.sh
deepneuro/data/: __init__.py  data_collection.py  data_generator.py  data_group.py  data_load.py  data_split.py  data_utilities.py  dataset_preprocessor.py  generators.py  (+3 more)
docs/: Makefile  make.bat
notebooks/: Call_External_Packages.ipynb  Preprocess_and_Augment.ipynb  Publication_Figures.ipynb  Run_Inference.ipynb  Train_Model.ipynb  Use_DeepNeuro_Pretrained_Models_Docker.ipynb  load_data.ipynb
(+234 files in other folders)
