[metadata]
description-file = README.md

[flake8]
max-line-length = 600
ignore = W291,W292,W293,E722,E115,W391,E127,E128,E116
exclude = 
    deepneuro/pipelines
    deepneuro/models/timenet.py
    deepneuro/models/gan.py
    docs
    misc
    package_resources
    .git

[pytest]
addopts = --verbose
norecursedirs = .tox .git env docs package_resources