[metadata]
description-file = README.md

[flake8]
max-line-length = 600
ignore = W291,W292,W293,E722,E115,W391,E127,E128,E116,E265,E402
exclude = 
    deepneuro/pipelines
    deepneuro/models
    docs
    misc
    package_resources
    .git
    deepneuro/core.py
    __init__.py

[tool:pytest]
addopts = --verbose
norecursedirs = .tox .git env docs package_resources
